--- a/exercicios/aula_002_10/style_desafio.css
+++ b/exercicios/aula_002_10/style_desafio.css
@@ -3,6 +3,10 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
+
+
+
+
 body {
   display: flex;
   flex-direction: row;
@@ -61,6 +65,10 @@ section.family-members h3 {
 
 .purple {
   color: blueviolet;
+}
+
+.white{
+  color: white;
 }
 
 .bblue {
@@ -282,7 +290,7 @@ article.div_todo ol li{
     box-shadow: 1px 5px 8px rgba(0, 0, 0, 0.1);
 }
 
-ol li:hover{
+li:hover{
     background-color: #656565;
     font-size: 2em;
     color: black;
@@ -354,85 +362,103 @@ article.div_todo ol li span{
 /*  -------------GRID   ------------------  */
 
 .family-members {
-    display: grid;
-    grid-template-columns: 1fr;
-    /* grid-template-columns: repeat(auto-fit, minmax(700px, 1fr)); */
-    /* grid-template-columns: 1fr;  */
-    /* Definindo apenas uma coluna */
-    gap: 20px;
-    grid-auto-flow: dense;
-  }
-  
-  .shopping-list,
-  .todo-list {
-    display: grid;
-    grid-template-columns: 1fr;
-  
-    /* grid-template-columns: 1fr; */
-    gap: 20px;
-  }
-  
-  .grid-heading {
-    text-align: center;
-  }
-  
-  .family-members,
-  .shopping-list,
-  .todo-list {
-    flex: 1;
-    padding: 10px;
-  }
-  
-  
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(700px, 1fr));
+  /* grid-template-columns: 1fr;  */
+  /* Definindo apenas uma coluna */
+  gap: 20px;
+  grid-auto-flow: dense;
+}
+
+.shopping-list,
+.todo-list {
+  display: grid;
+  grid-template-columns: 1fr;
+
+  /* grid-template-columns: 1fr; */
+  gap: 20px;
+}
+
+.grid-heading {
+  text-align: center;
+}
+
+.family-members,
+.shopping-list,
+.todo-list {
+  flex: 1;
+  padding: 10px;
+}
+
+
+  /* acima esta o antigo */
   
 
+
+  section.familiar_org{
+    display: flex;
+    flex-direction: column;
+  }
+
+
+
 /* ----------------TABELA--------------*/
+
+table tbody{
+  font-size: 5em;
+}
+
 .tg {
   border-collapse: collapse;
   /* border-spacing: 0; */
   box-shadow: 2px 5px 14px rgba(0, 0, 0, 0.3);
   /* border: 1px solid white; */
   margin-top: 15px;
+  
+
  
 }
 .tg td {
-  border-color: white;
+  /* border-color: white; */
   border-style: solid;
   border-width: 1px;
-  font-family: Arial, sans-serif;
   font-size: 14px;
   overflow: hidden;
   padding: 10px 5px;
   word-break: normal;
+  font-weight: bold;
 }
 .tg th {
     
       border-color: white;
   border-style: solid;
   border-width: 1px;
-  font-family: Arial, sans-serif;
-  font-size: 14px;
+  /* font-family: Arial, sans-serif; */
+  font-size: 19px;
   font-weight: normal;
   overflow: hidden;
   padding: 10px 5px;
   word-break: normal;
+  /* font-weight: bold; */
 }
 .tg .tg-lzqt {
     
-  background-color: #656565;
-  border-color: inherit;
+  background-color: #313877;
+  /* border-color: inherit; */
   color: white;
-  font-weight: bold;
+  
   text-align: center;
   vertical-align: center;
+  font-weight: bold;
 }
 /* .tg .tg-oq35{background-color:#333333;border-color:inherit;text-align:left;vertical-align:top} */
 .tg .tg-5w3z {
     
   background-color: #ecf4ff;
-  border-color: inherit;
+  /* border-color: inherit; */
   text-align: center;
   vertical-align: center;
+  /* font-weight: bold; */
 }
 /*--------------------------------------------*/
 footer{
