--- a/exercicios/aula_003/AjudeACausa/assets/styles.css
+++ b/exercicios/aula_003/AjudeACausa/assets/styles.css
@@ -1,211 +1,193 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton&family=Fira+Sans+Condensed:wght@400;500&family=Roboto:ital,wght@0,400;0,500;0,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Fira+Sans+Condensed:wght@400;500&family=Roboto:ital,wght@0,400;0,500;0,700;1,900&display=swap");
 
-:root{
-    --background: #89d8d8;
+:root {
+  --background: #89d8d8;
 }
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 
-body{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color:var(--background);
-    background-image: url('img/27843.jpg');
-    background-position: inherit;
-    background-size: cover;
-
-} 
-
-.container{
-    width: 80%;
-    height: 80vh;
-    display: flex;
-    box-shadow: 5px 5px 10px rgba(0, 10, 10, 0.2);
-    
+body {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--background);
+  background-image: url("img/27843.jpg");
+  background-position: inherit;
+  background-size: cover;
 }
 
-.img-form{
-    width: 50% ;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    border-radius: 20px 0 0px 20px;
-    
+.container {
+  width: 80%;
+  height: 80vh;
+  display: flex;
+  box-shadow: 5px 5px 10px rgba(0, 10, 10, 0.2);
 }
 
-.img-form img{
-    width: auto;
-    height: 100%;
-    object-fit: cover;
-    object-position: 120px;
-    
+.img-form {
+  width: 50%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  border-radius: 20px 0 0px 20px;
 }
 
-.form{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border-radius: 0 20px 20px 0;
-    /* background: rgba(12, 183, 21, 0.25); */
-    backdrop-filter: blur(50px) saturate(50%);
-    -webkit-backdrop-filter: blur(3px) saturate(50%);
-    background-color: rgba(190, 236, 255, 0.638);
-    border: 1px solid rgba(219, 209, 219, 0.3);
-    padding: 30px;
+.img-form img {
+  width: auto;
+  height: 100%;
+  object-fit: cover;
+  object-position: 120px;
 }
 
-.form-header{
-    margin-bottom: 1rem;
-    
+.form {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 0 20px 20px 0;
+  /* background: rgba(12, 183, 21, 0.25); */
+  backdrop-filter: blur(50px) saturate(50%);
+  -webkit-backdrop-filter: blur(3px) saturate(50%);
+  background-color: rgba(190, 236, 255, 0.638);
+  border: 1px solid rgba(219, 209, 219, 0.3);
+  padding: 30px;
 }
 
-.input-group{
-    display: flex;
-    
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 1rem 0;
-
+.form-header {
+  margin-bottom: 1rem;
 }
 
-.input-box{
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 1.1rem;
+.input-group {
+  display: flex;
+
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 1rem 0;
+}
+
+.input-box {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1.1rem;
 }
 
 /* .input-group .input-box .xsize{
     width: 600px;
 } */
 
-.input-box input{
-    margin: 0.5rem 0;
-    padding: 0.8rem 1.2rem;
-    border: none;
-    border-radius: 10px;
-    box-shadow: 1px 1px 6px #0000001c;
+.input-box input {
+  margin: 0.5rem 0;
+  padding: 0.8rem 1.2rem;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 1px 1px 6px #0000001c;
 }
 
-.input-box input:hover{
-    background-color: #eeeeee75;
+.input-box input:hover {
+  background-color: #eeeeee75;
 }
 
-.input-box input:focus-visible{
-    outline: 1px solid #c5c2ff;
+.input-box input:focus-visible {
+  outline: 1px solid #c5c2ff;
 }
 
-fieldset{
-    border:none;
-    /* background-color: #fff; */
-    padding: 20px;
-    border-radius: 20px;
-    border: 1px solid rgb(179, 229, 250);
+fieldset {
+  border: none;
+  /* background-color: #fff; */
+  padding: 20px;
+  border-radius: 20px;
+  border: 1px solid rgb(179, 229, 250);
 }
 
-fieldset:hover{
-    
-    background-color: #eeeeee75;
+fieldset:hover {
+  background-color: #eeeeee75;
 }
 
 .input-box label,
-legend{
-    font-size: 1rem;
-    font-weight: 600;
-    color: #000000c0;
+legend {
+  font-size: 1rem;
+  font-weight: 600;
+  color: #000000c0;
 }
 
-legend{
-/*     
-    margin-left: 40px;
-     */
+.input-box input::placeholder {
+  color: #000000be;
+  font-weight: 600;
 }
 
-.input-box input::placeholder{
-    color:#000000be;
-    font-weight: 600;
+.shirt-group {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0.2rem;
+  padding: 0 0.5rem;
 }
 
-.shirt-group{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 0.2rem;
-    padding: 0 0.5rem;
-    
+.shirt-input {
+  display: flex;
+  align-items: center;
 }
 
-.shirt-input{
-    display: flex;
-    align-items: center;
-    
+.shirt-input input {
+  margin-right: 0.35rem;
 }
 
-.shirt-input input{
-    margin-right: 0.35rem;
+.gender-input label {
+  font-size: 0.81rem;
+  font-weight: 600;
+  color: #000000c0;
 }
 
-.gender-input label{
-    font-size: 0.81rem;
-    font-weight: 600;
-    color: #000000c0;
-}
-
-.container-inputs-shirt{
-    margin-bottom: 35px;
+.container-inputs-shirt {
+  margin-bottom: 35px;
 }
 
 /* ----------- */
 
-.category-group{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 0.62rem;
-    padding: 0 0.5rem;
-    
-    
+.category-group {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0.62rem;
+  padding: 0 0.5rem;
 }
 
-.category-input{
-    display: flex;
-    align-items: center;
-    
+.category-input {
+  display: flex;
+  align-items: center;
 }
 
-.category-input input{
-    margin-right: 0.35rem;
+.category-input input {
+  margin-right: 0.35rem;
 }
 
-.category-input label{
-    font-size: 0.81rem;
-    font-weight: 600;
-    color: #000000c0;
+.category-input label {
+  font-size: 0.81rem;
+  font-weight: 600;
+  color: #000000c0;
 }
 
-.container-inputs-category{
-    margin-bottom: 35px;
+.container-inputs-category {
+  margin-bottom: 35px;
 }
 
-.button button{
-    width: 100%;
-    margin-top: 0.2;
-    border: none;
-    background-color: #63c3ff;
-    padding: 0.62rem;
-    border-radius: 5px;
-    cursor: pointer;
+.button button {
+  width: 100%;
+  margin-top: 0.2;
+  border: none;
+  background-color: #63c3ff;
+  padding: 0.62rem;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-.button button:hover{
-    background-color: #57aade;
+.button button:hover {
+  background-color: #57aade;
 }
