--- a/exercicios/aula_003/AjudeACausa/assets/styles.css
+++ b/exercicios/aula_003/AjudeACausa/assets/styles.css
@@ -106,6 +106,7 @@ fieldset {
   padding: 20px;
   border-radius: 20px;
   border: 1px solid rgb(179, 229, 250);
+  
 }
 
 fieldset:hover {
@@ -140,8 +141,8 @@ legend {
   margin-right: 0.35rem;
 }
 
-.gender-input label {
-  font-size: 0.81rem;
+.shirt-input label {
+  font-size: 1rem;
   font-weight: 600;
   color: #000000c0;
 }
@@ -157,7 +158,10 @@ legend {
   justify-content: space-between;
   margin-top: 0.62rem;
   padding: 0 0.5rem;
+  
 }
+
+
 
 .category-input {
   display: flex;
@@ -166,12 +170,18 @@ legend {
 
 .category-input input {
   margin-right: 0.35rem;
+  
 }
 
 .category-input label {
-  font-size: 0.81rem;
+  font-size: 1.0rem;
   font-weight: 600;
   color: #000000c0;
+  
+}
+
+.category-input{
+    font-size: 900px;
 }
 
 .container-inputs-category {
@@ -182,12 +192,18 @@ legend {
   width: 100%;
   margin-top: 0.2;
   border: none;
-  background-color: #63c3ff;
+  background-color: #527388;
   padding: 0.62rem;
-  border-radius: 5px;
+  border-radius: 15px;
   cursor: pointer;
+  font-size: 1.4rem;
+  font-weight: 800;
+  color: #fff;
+}
+.button button:hover {
+  background-color: #658395;
 }
 
-.button button:hover {
-  background-color: #57aade;
+.button button:active{
+    border: #89d8d8;
 }
