relocate css file and images

--- a/exercicios/aula_003/AjudeACausa/styles.css
+++ b/exercicios/aula_003/AjudeACausa/styles.css
@@ -18,7 +18,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: var(--background);
-  background-image: url("img/27843.jpg");
+  background-image: url("assets/img/27843.jpg");
   background-position: inherit;
   background-size: cover;
 }
