--- a/exercicios/projeto_001/asstes/css/styles.css
+++ b/exercicios/projeto_001/asstes/css/styles.css
@@ -8,11 +8,8 @@
 
 
 body{
-    background-color: #EAD9CE;
+    background-color: var(--background-color);
     width: 100%;
     margin: 0 auto;
 }
 
-hr{
-    outline-style: dotted;
-}
