--- a/exercicios/projeto_001/asstes/css/navbar.css
+++ b/exercicios/projeto_001/asstes/css/navbar.css
@@ -1,8 +1,9 @@
 .nav_main {
   margin: 0 auto;
-  width: 80rem;
+  width: 100%;
   background-color: var(--background-color);
-  height: 170px;
+  height: 150px;
+  
 }
 
 .nav_main ul {
@@ -10,11 +11,14 @@
   margin: 0;
   text-align: right;
   padding-top: 65px;
+  padding-left: 10%;
+  padding-right: 10%;
   font-family: "Lora", serif;
   font-size: 0.9375rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  
 }
 
 .nav_main ul li {
@@ -53,7 +57,7 @@
   right: 50%;
   top: 0;
   content: "";
-  padding-top: 33px;
+  padding-top: 25px;
   margin-left: -75px; /* 50% do tamanho do width*/
   text-align: center;
 }
@@ -62,12 +66,21 @@ hr{
     /* outline-style: dotted; */
     color: var(--text-color);
     opacity: .1;
+    padding: 0;
+    margin: 0;
 }
 
-@media screen and (max-width: 845px) {
+@media screen and (max-width: 1130px) {
   .logo_area {
     left: 20%;
   right: 20%;
+  }
+
+  .nav_main ul {
+   
+    padding-left: 5%;
+  padding-right: 5%;
+    
   }
 
   .nav_main ul li:nth-child(1) {
@@ -79,8 +92,9 @@ hr{
   .nav_main ul li:nth-child(3) {
     float: none;
   }
-  .nav_main ul li:nth-child(8) {
+  .nav_main ul li:nth-child(7) {
     display: none;
+
   }
 
 }
@@ -97,6 +111,9 @@ hr{
 
   .nav_main ul {
     padding-top: 20px;
+    padding-left: 5%;
+  padding-right: 5%;
+    
   }
   
   .nav_main ul li:nth-child(5) {
@@ -107,7 +124,7 @@ hr{
     display: none;
   }
 
-  .nav_main ul li:nth-child(7) {
+  .nav_main ul li:nth-child(4) {
     display: none;
   }
 }
