--- a/exercicios/projeto_001/asstes/css/main.css
+++ b/exercicios/projeto_001/asstes/css/main.css
@@ -1,10 +1,91 @@
-#main{
-    width: 100rem;
-    float:left;
-    padding: 20px 10rem;
-    background-color: red;
+#main {
+  width: 100%;
+  height: 100vh;
+  background-color: blue;
+  
+}
+/* PRIMEIRA AREA */
+.home{
+    display: table;
+    width: 100%;
+    /* height: 100vh; */
+    background-color: var(--background-color);
+    text-align: center;
 }
 
-.texto_sobre h1{
-    margin-bottom: 12px;
+.centralizar{
+    display: table-cell;
+    text-align: middle;
+    /* vertical-align: middle; */
+}
+
+.home_texto{
+    width: 45%;
+    display: inline-block;
+     /* margin-right: 26px; */
+    text-align: left;
+    vertical-align: middle;
+    float: none;
+    margin-left: 5%;
+    }
+
+
+.home_texto h1 {
+  color: var(---text-color);
+
+  font-size: 3.2rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  font-family: "Fleur De Leah", cursive;
+
+  width: 100%;
+  margin-bottom: 5%;
+}
+
+.home_texto p {
+
+  font-size: 1.2rem;
+}
+
+.home_img {
+  
+  width: 40%;
+  display: inline-block;
+  /* margin-left: auto; */
+  /* max-height: fit-content; */
+    vertical-align: middle;
+    text-align: center;
+    float: none;
+}
+
+.home_img img{
+    /* width: auto; */
+    /* height: 100%; */
+    display: block;
+    /* margin: 0 auto; */
+}
+
+/* SEGUNDA AREA --- sobre mim*/
+
+
+
+
+/* TABLE */
+#table{
+    width:100%;
+    margin: 0 auto;
+
+    
+}
+
+#table table {
+    width: 60%;
+    border-collapse: collapse;
+}
+
+#table th, td {
+    border: 1px solid #000;
+    padding: 8px;
+    text-align: center;
 }
