--- a/exercicios/projeto_001/asstes/css/styles.css
+++ b/exercicios/projeto_001/asstes/css/styles.css
@@ -4,12 +4,13 @@
     --text-hover: #333;
     --background-color: #ead9ce;
     --background-white: #F2F2F2;
+    --font-drawing: 'Fleur De Leah', cursive;
   }
 
 
 body{
     background-color: var(--background-color);
-    width: 100rem;
+    width: 100%;
     margin: 0 auto;
 }
 
