--- a/exercicios/projeto_001/asstes/css/main.css
+++ b/exercicios/projeto_001/asstes/css/main.css
@@ -1,34 +1,32 @@
 #main {
   width: 100%;
-  height: 100vh;
+
   background-color: blue;
-  
 }
 /* PRIMEIRA AREA */
-.home{
-    display: table;
-    width: 100%;
-    /* height: 100vh; */
-    background-color: var(--background-color);
-    text-align: center;
+.home {
+  display: table;
+  width: 100%;
+  /* height: 100vh; */
+  background-color: var(--background-color);
+  text-align: center;
 }
 
-.centralizar{
+/* .centralizar{
     display: table-cell;
     text-align: middle;
-    /* vertical-align: middle; */
+    
+} */
+
+.home_texto {
+  width: 45%;
+  display: inline-block;
+  /* margin-right: 26px; */
+  text-align: left;
+  vertical-align: middle;
+  float: none;
+  margin-left: 5%;
 }
-
-.home_texto{
-    width: 45%;
-    display: inline-block;
-     /* margin-right: 26px; */
-    text-align: left;
-    vertical-align: middle;
-    float: none;
-    margin-left: 5%;
-    }
-
 
 .home_texto h1 {
   color: var(---text-color);
@@ -44,48 +42,87 @@
 }
 
 .home_texto p {
-
   font-size: 1.2rem;
+  line-height: 1.8rem;
+  width: 80%;
 }
 
 .home_img {
-  
   width: 40%;
   display: inline-block;
   /* margin-left: auto; */
   /* max-height: fit-content; */
-    vertical-align: middle;
-    text-align: center;
-    float: none;
+  vertical-align: middle;
+  text-align: center;
+  float: none;
 }
 
-.home_img img{
-    /* width: auto; */
-    /* height: 100%; */
-    display: block;
-    /* margin: 0 auto; */
+.home_img img {
+  /* width: auto; */
+  /* height: 100%; */
+  display: block;
+  /* margin: 0 auto; */
 }
 
 /* SEGUNDA AREA --- sobre mim*/
 
+.sobre_nos {
+  /* display: table;
+    width: 100%; */
+  background-color: var(--background-color);
+  /* text-align: left; */
+}
 
+/* .sobre_mim-centralizar{
+    display: inline-block;
+} */
 
+.sobre_nos_container-img {
+  display: inline-block;
+  width: fit-content;
+  overflow: auto;
+}
+
+.sobre_nos_container-texto {
+  display: inline-block;
+  width: 30%;
+  margin-left: 5%;
+  vertical-align: top;
+  margin-top: 260px;
+}
+
+.sobre_nos_container-texto h2 {
+  font-family: var(--font-alternative);
+  font-size: 2.5rem;
+
+  margin-bottom: 10px;
+}
+
+.sobre_nos_container-texto p {
+  font-size: 0.9rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 2rem;
+}
+
+/* .sobre_mim_container-img img{
+    
+} */
 
 /* TABLE */
-#table{
-    width:100%;
-    margin: 0 auto;
-
-    
+#table {
+  width: 100%;
+  margin: 0 auto;
 }
 
 #table table {
-    width: 60%;
-    border-collapse: collapse;
+  width: 60%;
+  border-collapse: collapse;
 }
 
-#table th, td {
-    border: 1px solid #000;
-    padding: 8px;
-    text-align: center;
+#table th,
+td {
+  border: 1px solid #000;
+  padding: 8px;
+  text-align: center;
 }
