--- a/exercicios/projeto_001/asstes/css/styles.css
+++ b/exercicios/projeto_001/asstes/css/styles.css
@@ -5,8 +5,14 @@
     --background-color: #ead9ce;
     --background-white: #F2F2F2;
     --font-drawing: 'Fleur De Leah', cursive;
+    --font-h1eP: 'Baskervville', serif;
+    --font-Lora: 'Lora', serif;
   }
 
+html p{
+    font-family: var(--font-Lora);
+    color: var(--text-color)
+}
 
 body{
     background-color: var(--background-color);
