--- a/exercicios/projeto_001/asstes/css/styles.css
+++ b/exercicios/projeto_001/asstes/css/styles.css
@@ -2,6 +2,7 @@
     --text-black: #000;
     --text-color: #1b1b1b;
     --text-hover: #333;
+    --element-color:#B07B54;
     --background-color: #ead9ce;
     --background-white: #F2F2F2;
     --font-drawing: 'Fleur De Leah', cursive;
