--- a/exercicios/projeto_001/asstes/css/main.css
+++ b/exercicios/projeto_001/asstes/css/main.css
@@ -3,20 +3,18 @@
   background-color: blue;
 }
 /* PRIMEIRA AREA */
-.home {
-  display: table;
-  width: 100%;
-  background-color: var(--background-color);
-  text-align: center;
-}
+#home {
+    display: block;
+    background-color: var(--background-color);
+    text-align: right;
+  }
 
 .home_texto {
-  width: 45%;
+  width: 29%;
   display: inline-block;
   text-align: left;
   vertical-align: middle;
-  float: none;
-  margin-left: 5%;
+  /* margin-left: 5%; */
 }
 
 .home_texto h1 {
@@ -37,72 +35,128 @@
 }
 
 .home_img {
-  width: 40%;
-  display: inline-block;
-  vertical-align: middle;
-  text-align: center;
-  float: none;
-}
+    display: inline-block;
+    vertical-align: middle;
+    width: 60%;
+  }
 
 .home_img img {
-  display: block;
-  margin: 20px auto;
+    margin: 20px auto;
 }
 /* Best Sellers */
 
-#best_sellers {
-  background-color: var(--background-white);
-  padding: 20px;
-  height: fit-content;
+#trendy {
+    background-color: var(--background-white);
+    padding: 100px 20px;
+    height: fit-content;
+  }
+
+  #trendy aside {
+    height: 100%;
+    display: inline-block;
+    margin-right: 5%;
+    border: 1px solid var(--background-color);
+    border-radius: 10px;
+    padding: 20px;
+    margin-top: 32px;
+    margin-left: 30px;
+    
+  }
+
+  #trendy aside h3{
+    margin-bottom: 10px;
+    text-decoration: underline;
+    font-family: var(--font-Lora);
+    text-align: center;
+  }
+
+  #trendy aside h4{
+    font-weight: 700;
+    margin-bottom: 5px;
+    margin-left: 5px;
+  }
+
+#trendy aside p{
+    margin-bottom: revert;
+    font-size: 0.9rem;
+    margin-left: 5px;
+  }
+
+
+#trendy aside img{
+    width: 245px;
+    height: 245px;
+    border-radius: 5px;
+    box-shadow: 1px 2px 15px 1px rgba(105, 97, 76, 0.4);
 }
 
-#best_sellers .articleContainer {
-    display: inline-block;
+#trendy aside ul{
+    width: min-content;
+}
+
+#trendy .articleContainer {
+  display: inline-block;
   width: 70%;
   vertical-align: top;
+  text-align: center;
 }
 
-#best_sellers .articleContainer article{
-    background-color: #f9f9f9;
-  padding: 20px;
+#trendy .articleContainer article {
+  background-color: var(--background-white);
+  padding: 20px 40px 20px 40px;
   margin-bottom: 20px;
-  width: 30%;
+  /* width: 30%; */
   display: inline-block;
 }
 
-#best_sellers .articleContainer article{
-    margin: 10px 0;
-    border-radius: 20px;
+#trendy .articleContainer article {
+  margin: 10px 0;
+  
 }
 
-#best_sellers .articleContainer article figure{
-    margin-bottom: 8px;
+#trendy .articleContainer article figure {
+  margin-bottom: 8px;
 }
 
-#best_sellers .articleContainer article figure img{
-    width: 100%;
-    border-radius: 10px;
+#trendy .articleContainer article figure img {
+  /* width: 85%; */
+  border-radius: 5px;
+  margin-bottom: 10px;
+  width: 290px;
+  height: 300px;
+}
+
+
+#trendy .articleContainer h2 {
+  
+  text-align: center;
+  font-family: var(--font-alternative);
+  font-size: 2.5rem;
+  margin-bottom: 10px;
+}
+
+#trendy .articleContainer article figure figcaption {
+    font-size: 1.2rem;
+    margin-left: 10px;
+    font-family: var(--font-alternative);
+    font-weight: bold;
+    text-align: left;
+}
+
+#trendy .articleContainer article div span {
+    font-size: 1.2rem;
+    margin-left: 10px;
+    font-family: var(--font-Lora);
+    
 }
 
 .price{
-
-}
-
-#best_sellers aside{
-    padding: 20px;
-  width: 25%;
-  height: 100%;
-  display: inline-block;
-  margin-right: 50px;
-}
-
-#best_sellers .articleContainer aside h2{
-    
+    text-align: left;
 }
 
 /* About us ---------------------------------*/
 
-.about_us {
+#about_us {
   background-color: var(--background-color);
 }
 
@@ -298,4 +352,8 @@ button {
 
 .github {
   margin-top: 10px;
+}
+
+@media screen and (max-width: 1430px) {
+
 }
