--- a/exercicios/projeto_001/asstes/css/styles.css
+++ b/exercicios/projeto_001/asstes/css/styles.css
@@ -10,6 +10,10 @@
     --font-alternative: 'Baskervville', serif;
     --font-Lora: 'Lora', serif;
   }
+html{
+    scroll-behavior: smooth;
+    
+}
 
 html p{
     font-family: var(--font-Lora);
