--- a/exercicios/projeto_001/asstes/css/main.css
+++ b/exercicios/projeto_001/asstes/css/main.css
@@ -361,6 +361,8 @@ button {
   margin-top: 10px;
 }
 
-@media screen and (max-width: 1430px) {
-
+@media screen and (max-width: 768px) {
+    #main_header{
+        background-color: red;
+    }
 }
