--- a/exercicios/projeto_001/asstes/css/main.css
+++ b/exercicios/projeto_001/asstes/css/main.css
@@ -1,19 +1,19 @@
 #main {
   width: 100%;
-  background-color: blue;
+  background-color: var(--background-color);
 }
 
-#main_header{
-    position: fixed;
-    border: 2px solid #D9CCC2;
+#main_header {
+  position: fixed;
+  border: 2px solid #d9ccc2;
 }
 /* PRIMEIRA AREA */
 #home {
-    display: block;
-    background-color: var(--background-color);
-    text-align: right;
-    margin-top: 142px;
-  }
+  display: block;
+  background-color: var(--background-color);
+  text-align: right;
+  margin-top: 142px;
+}
 
 .home_texto {
   width: 29%;
@@ -41,63 +41,61 @@
 }
 
 .home_img {
-    display: inline-block;
-    vertical-align: middle;
-    width: 60%;
-  }
+  display: inline-block;
+  vertical-align: middle;
+  width: 60%;
+}
 
 .home_img img {
-    margin: 20px auto;
+  margin: 20px auto;
 }
 /* Best Sellers */
 
 #trendy {
-    background-color: var(--background-white);
-    padding: 100px 20px;
-    height: fit-content;
-  }
-
-  #trendy aside {
-    height: 100%;
-    display: inline-block;
-    margin-right: 5%;
-    border: 1px solid var(--background-color);
-    border-radius: 10px;
-    padding: 20px;
-    margin-top: 32px;
-    margin-left: 30px;
-    
-  }
-
-  #trendy aside h3{
-    margin-bottom: 10px;
-    text-decoration: underline;
-    font-family: var(--font-Lora);
-    text-align: center;
-  }
-
-  #trendy aside h4{
-    font-weight: 700;
-    margin-bottom: 5px;
-    margin-left: 5px;
-  }
-
-#trendy aside p{
-    margin-bottom: revert;
-    font-size: 0.9rem;
-    margin-left: 5px;
-  }
-
-
-#trendy aside img{
-    width: 245px;
-    height: 245px;
-    border-radius: 5px;
-    box-shadow: 1px 2px 15px 1px rgba(105, 97, 76, 0.4);
+  background-color: var(--background-white);
+  padding: 100px 20px;
+  height: fit-content;
 }
 
-#trendy aside ul{
-    width: min-content;
+#trendy aside {
+  height: 100%;
+  display: inline-block;
+  margin-right: 5%;
+  border: 1px solid var(--background-color);
+  border-radius: 10px;
+  padding: 20px;
+  margin-top: 32px;
+  margin-left: 30px;
+}
+
+#trendy aside h3 {
+  margin-bottom: 10px;
+  text-decoration: underline;
+  font-family: var(--font-Lora);
+  text-align: center;
+}
+
+#trendy aside h4 {
+  font-weight: 700;
+  margin-bottom: 5px;
+  margin-left: 5px;
+}
+
+#trendy aside p {
+  margin-bottom: revert;
+  font-size: 0.9rem;
+  margin-left: 5px;
+}
+
+#trendy aside img {
+  width: 245px;
+  height: 245px;
+  border-radius: 5px;
+  box-shadow: 1px 2px 15px 1px rgba(105, 97, 76, 0.4);
+}
+
+#trendy aside ul {
+  width: min-content;
 }
 
 #trendy .articleContainer {
@@ -117,7 +115,6 @@
 
 #trendy .articleContainer article {
   margin: 10px 0;
-  
 }
 
 #trendy .articleContainer article figure {
@@ -132,9 +129,7 @@
   height: 300px;
 }
 
-
 #trendy .articleContainer h2 {
-  
   text-align: center;
   font-family: var(--font-alternative);
   font-size: 2.5rem;
@@ -142,22 +137,21 @@
 }
 
 #trendy .articleContainer article figure figcaption {
-    font-size: 1.2rem;
-    margin-left: 10px;
-    font-family: var(--font-alternative);
-    font-weight: bold;
-    text-align: left;
+  font-size: 1.2rem;
+  margin-left: 10px;
+  font-family: var(--font-alternative);
+  font-weight: bold;
+  text-align: left;
 }
 
 #trendy .articleContainer article div span {
-    font-size: 1.2rem;
-    margin-left: 10px;
-    font-family: var(--font-Lora);
-    
+  font-size: 1.2rem;
+  margin-left: 10px;
+  font-family: var(--font-Lora);
 }
 
-.price{
-    text-align: left;
+.price {
+  text-align: left;
 }
 
 /* About us ---------------------------------*/
@@ -360,67 +354,5 @@ button {
 .github {
   margin-top: 10px;
 }
-
-@media screen and (max-width: 768px) {
-    #main_header{
-        
-    }
-    #home{
-display: block;
-margin-top: 200px;
-height: 790px;
-    }
-
-    .home_texto{
-        display: block;
-        text-align: center;
-        width: 440px;
-        
-    }
-
-    .home_texto h1{
-        display: block;
-        text-align: center;
-        width: 440px;
-        
-    }
-
-    .home_texto p{
-        display: inline;
-        text-align: center;
-        width: 400px;
-        padding: 30px;
-    }
-
-    .home_img{
-        display: block;
-    }
-
-    .home_img img{
-        display: block;
-        width: 440px;
-    }
-/* ---------------------trendy */
-#trendy{
-    padding: 20px;
-}
-#trendy aside{
-    display: none;
-}
-/* about us---------------------- */
-.about_us_container-img img{
-    width: 440px;
-    height: 400px;
-}
-
-
-
-
-
-
-
-}
-
-
 
 
