--- a/exercicios/aula_014/desafio-aula014/style.css
+++ b/exercicios/aula_014/desafio-aula014/style.css
@@ -6,6 +6,7 @@ body{
     align-items: center;
 }
 #texto{
+    width: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
