--- a/exercicios/react/browser_gamer/src/components/card/styles.css
+++ b/exercicios/react/browser_gamer/src/components/card/styles.css
@@ -1,8 +1,35 @@
 .cardContainer{
-    height: 100px;
-    width: 100px;
-    background-color: aqua;
-    color: white;
+    height: fit-content;
+    width: 15rem;
+    background-color: white;
+    color:black;
+    margin:0.5rem;
     display:flex;
     flex-direction: column;
+    border-radius:1rem;
+    box-shadow: 0px 10px 8px #999;
 }
+
+.cardImg{
+    width: 100%;
+    /* height:  */
+    border-radius: 1rem 1rem 0 0 ;
+
+}
+
+.cardTitle{
+    font-weight: 700;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.cardDescription{
+    height: 3rem;
+    overflow: hidden;
+}
+
+.cardTitle, .cardDescription{
+    margin: 0.5rem 5%;
+}
+
+
