--- a/exercicios/react/browser_gamer/src/components/header/styles.css
+++ b/exercicios/react/browser_gamer/src/components/header/styles.css
@@ -31,7 +31,7 @@
     transition: all 0.3s ease 0s;
 }
 
-a:active:not(.logo a){
+a.active:not(.logo a){
     color:rgb(0, 200, 255);
     font-weight: 900;
     
